kubernetes/spring-app/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
spec:
  ports:
  - port: 5432
  selector:
    app: postgresdb
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
spec:
  selector:
    matchLabels:
      app: postgresdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - image: postgres
        name: postgresdb
        ports:
        - containerPort: 5432
          name: postgres
