kubernetes/spring-app/springboot-ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-ws-app
spec:
  type: ClusterIP
  selector:
    app: springboot-ws-app
  ports:
    - name: http
      protocol: TCP
      targetPort: sprbt-app-port
      port: 58091
