kubernetes/spring-app/ingress-spring-ws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 
spec:
  rules:
    - host: spring-ws.com
      http:
        paths:
          - path: /api/users
            pathType: Exact
            backend:
              service:
                name: springboot-ws-app
                port:
                  number: 8080
